// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payment should handle payment instruments with payload 1`] = `
Object {
  "adyenPaymentInstrument": Object {
    "custom": Object {
      "adyenAction": "mocked_adyen_action",
      "adyenMD": "mocked_adyen_MD",
      "adyenPaymentData": "mocked_adyen_payment_data",
      "adyenRedirectURL": "https://some_mocked_url/signature",
    },
    "paymentTransaction": Object {
      "custom": Object {
        "Adyen_merchantSig": "mocked_signature",
      },
    },
  },
  "details": Object {
    "payload": "mocked_payload",
  },
  "paymentData": "mocked_adyen_payment_data",
}
`;

exports[`Payment should handle payment instruments with redirect result 1`] = `
Object {
  "adyenPaymentInstrument": Object {
    "custom": Object {
      "adyenAction": "mocked_adyen_action",
      "adyenMD": "mocked_adyen_MD",
      "adyenPaymentData": "mocked_adyen_payment_data",
      "adyenRedirectURL": "https://some_mocked_url/signature",
    },
    "paymentTransaction": Object {
      "custom": Object {
        "Adyen_merchantSig": "mocked_signature",
      },
    },
  },
  "details": Object {
    "redirectResult": "mocked_redirect_result",
  },
  "paymentData": "mocked_adyen_payment_data",
}
`;
